--- a/pages/templates/pages/page_detail.html
+++ b/pages/templates/pages/page_detail.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block title %}{{page.title}}{% endblock %}
 {% block content %}
+{% include 'pages/include/page_menu.html'%}
 <main role="main">
   <div class="container">
     <div class="row mt-3">
