--- a/pages/templates/pages/page_list.html
+++ b/pages/templates/pages/page_list.html
@@ -2,9 +2,11 @@
 {% load static %}
 {% block title %}Páginas{% endblock %}
 {% block content %}
+{% include 'pages/include/page_menu.html'%}
 <main role="main">
   <div class="container mb-4">
-    {% for page in pages %}
+    <!--Objeto que tenemos que recorrer object_list (Nombre generico a la vista del modelo)--> 
+    {% for page in object_list %}
       <div class="row mt-3">
         <div class="col-md-9 mx-auto">
           <h2 class="mb-4">{{page.title}}</h2>
