--- a/pages/templates/pages/page_update_form.html
+++ b/pages/templates/pages/page_update_form.html
@@ -1,6 +1,6 @@
 {% extends 'core/base.html' %}
 {% load static %}
-{% block title %}Actualizar pagina{% endblock %}
+{% block title %}Actualizar página{% endblock %}
 {% block content %}
 {% include 'pages/include/page_menu.html'%}
 <main role="main">
@@ -9,10 +9,12 @@
       <div class="col-md-9 mx-auto">
         <h2 class="section-heading mb-4">{{page.title}}</h2>
         <div>
-          {{page.content|safe}}
-          {% if request.user.is_staff %}
-            <p><a href="#">Editar</a></p>
-          {% endif %}
+          <form action="" method="post">{% csrf_token %}                
+            {{ form.as_p }}               
+            <div class="text-center">
+            <input type="submit" class = "btn btn-primary btn-block" value="Actualizar página" />
+            </div>
+        </form> 
         </div>
       </div>
     </div>
