--- a/pages/templates/pages/page_list.html
+++ b/pages/templates/pages/page_list.html
@@ -12,13 +12,11 @@
           <h2 class="mb-4">{{page.title}}</h2>
           <div>
             <p>{{page.content|striptags|safe|truncatechars:"200"}}</p>
-            <p><a href="{% url 'pages:page' page.id page.title|slugify %}">Leer más</a>
-              <!--
+            <p><a href="{% url 'pages:page' page.id page.title|slugify %}">Leer más</a>              
               {% if request.user.is_staff %}
-                | <a href="#">Editar</a>
-                | <a href="#">Borrar</a>
-              {% endif %}
-              -->
+                | <a href="{% url 'pages:update' page.id %}">Editar</a>
+                | <a href="{% url 'pages:delete' page.id %}">Borrar</a>
+              {% endif %}              
             </p>
           </div>
         </div>
