--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -34,8 +34,17 @@
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link" href="/admin/">
-                  {% if request.user.is_staff %}Admin{% else %}Acceder{% endif %}
-                </a>
+                <!-- {% if request.user.is_staff %}Admin{% else %}Acceder{% endif %}-->
+                {% if not request.user.is_authenticated %}
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Acceder</a>
+                  </li>
+                {%else%}
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Salir</a>
+                  </li>
+                {%endif%}
+              </a>
               </li>
             </ul>
           </div>
