--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -39,7 +39,13 @@
                   <li class="nav-item">
                     <a class="nav-link" href="{% url 'login' %}">Acceder</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'signup' %}">Registro</a>
+                  </li>
                 {%else%}
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'profile' %}">Perfil</a>
+                  </li>
                   <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Salir</a>
                   </li>
