--- a/registration/templates/registration/profile_form.html
+++ b/registration/templates/registration/profile_form.html
@@ -24,7 +24,11 @@
               <input type="file" name="avatar" class="form-control-file mt-3" id="id_avatar">
               {{ form.bio }}
               {{ form.link }}
-              <input type="email" value={{request.user.email}} class="form-control mt-3" readonly>
+              <input type="email" value={{request.user.email}} class="form-control mt-3 " readonly>
+              <p class="mt-3">
+                Si deseas editar tu email haz click <a href="{% url 'profile_email' %}">aqui</a> <br>
+                Si quieres recuperar tu email haz click <a href="{% url 'password_change' %}">aqui</a>
+              </p>
               <input type="submit" class="btn btn-primary btn-block mt-3" value="Actualizar">
             </div>
           </div>
